<resources>
    <string name="app_name">Photor</string>

    <string name="menu_main_bottom_tab_home">home</string>
    <string name="menu_main_bottom_tab_gallery">gallery</string>
    <string name="menu_main_bottom_tab_resource">resource</string>

    <string name="main_activity_action_menu_item_backup">Backup</string>
    <string name="main_activity_action_menu_item_delete">Delete</string>
    <string name="main_activity_action_menu_item_settings">Settings</string>

    <string name="star_align_btn_select_label">select star photo</string>
    <string name="star_align_btn_boundary_label">boundary</string>
    <string name="star_align_enter_btn_label">star align</string>
    <string name="dof_calc_enter_btn_label">dof calc</string>

    <string name="star_align_progress_dialog_title">star aligning</string>
    <string name="star_align_progress_dialog_negetive_btn_label">cancel</string>

    <string name="save_align_res_btn_label">save</string>
    <string name="delete_align_res_btn_label">delete</string>

    <string name="permission_write_storage">this operation need write storage permission!</string>
    <string name="permission_camera">this operation need camera, write storage permission!</string>

    <string name="sky_ground_boundary_btn_label">boundary</string>
    <string name="sky_ground_reset_btn_label">reset</string>
    <string name="sky_ground_split_btn_label">split</string>

    <string name="sky_ground_align_save_failed">the image saved failed!</string>


    <string-array name="star_align_steps">
        <item>select photo</item>
        <item>specific boundary</item>
        <item>align</item>
    </string-array>


    <string name="infinity">&#8734;</string>
    <string name="negative_infinity">-&#8734;</string>
    <string name="no_a_number">NaN</string>

    <string name="sensor_size_text_view">允许弥散圆直径</string>
    <string name="sensor_size_button_label">型号</string>
    <string name="focal_text_view_label">焦距：</string>
    <string name="focal_text_view_number_init">24mm</string>
    <string name="aperture_text_view_label">光圈：</string>
    <string name="aperture_text_view_number_init">F/1.4</string>
    <string name="distance_text_view_label">距离：</string>
    <string name="distance_text_view_number_init">50cm</string>
    <string name="hyperfocal_distance_text_view_label">超焦距：</string>
    <string name="hyperfocal_distance_text_view_number_init">4.448m</string>
    <string name="near_depth_of_field_text_view_label">前景深：</string>
    <string name="near_depth_of_field_text_view_number_init">0.182m</string>
    <string name="depth_of_field_text_view_label">景深：</string>
    <string name="depth_of_field_text_view_number_init">0.469m</string>
    <string name="far_depth_of_field_text_view_label">后景深：</string>
    <string name="far_depth_of_field_text_view_number_init">0.287m</string>

    <string name="input_custom_circle_of_confusion_recycler_view_item">手动输入容许弥散圆直径</string>
    <string name="input_custom_circle_of_confusion_text_view_label">请手动输入容许弥散圆直径(单位:mm)</string>
    <string name="custom_circle_of_confusion_button_label">确定</string>
    <string name="circle_of_confusion_calculate_method_label">说明：容许弥散圆直径=感光元件(或底片)对角线长度 / 1730</string>

</resources>
